--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,11 @@ requires-python = ">=3.10"
 dependencies = [
     "appdirs==1.4.4",
     "attrs==22.1.0",
+    "click",
+    "doc2dash==3.0.0",
     "frozendict==2.3.6",
     "structlog==23.1.0",
+    "urllib3",
 ]
 dynamic = ["version", "readme"]
 
