--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ dev = [
     "mypy==1.2.0",
     #"pytest==7.2.1",
     #"types-requests==2.28.11.8",
-    #"types-appdirs==1.4.3.1",
+    "types-appdirs==1.4.3.1",
+    "types-urllib3",
     #"pytest-cov==4.0.0",
 ]
 
