--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "doc2dash==3.0.0",
     "packaging==23.2",
     "structlog==23.1.0",
-    "urllib3",
+    "urllib3==2.0.7",
     "toml==0.10.2",
     "typing-extensions==4.8.0"
 ]
@@ -36,9 +36,8 @@ dev = [
     "black==23.3.0",
     "mypy==1.2.0",
     "pytest==7.3.1",
-    #"types-requests==2.28.11.8",
     "types-appdirs==1.4.3.1",
-    "types-urllib3",
+    "types-toml==0.10.8.7",
     #"pytest-cov==4.0.0",
 ]
 
