--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
     "structlog==23.1.0",
     "urllib3==2.0.7",
     "toml==0.10.2",
-    "typing-extensions==4.8.0"
+    "typing-extensions==4.8.0",
+    "docker>=7.1.0",
 ]
 dynamic = ["version", "readme"]
 
